//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  posts Post [not null]
  profile Profile
  currentHashedRefreshToken String
}

Table Profile {
  id String [pk]
  username String [unique, not null]
  firstName String
  lastName String
  bio String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique]
  user User
}

Table Post {
  id String [pk]
  title String [not null]
  slug String [unique, not null]
  content String [not null]
  published Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  authorId String
  author User
  categories Category [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  posts Post [not null]
}

Table CategoryToPost {
  categoriesId String [ref: > Category.id]
  postsId String [ref: > Post.id]
}

Enum Role {
  ADMIN
  USER
}

Ref: Profile.userId - User.id

Ref: Post.authorId > User.id